indicator-china-weather (3.0.4-0ubuntu1) focal; urgency=medium

  * New bugfix release:
    - Fix the 404 error. (LP: #1870951)
    - Don't launch if locale is no zh_CN since it is not friendly to
      non-chinese users now.
  * debian:
    - Bump standards-versition to 4.5.0.
    - Use debhelper-compat instead of debhelper.
    - Set Rules-Requires-Root to no.

 -- handsome_feng <jianfengli@ubuntukylin.com>  Fri, 10 Apr 2020 16:23:19 +0800

indicator-china-weather (3.0.3-0ubuntu2) focal; urgency=medium

  * No-change rebuild for libgcc-s1 package name change.

 -- Matthias Klose <doko@ubuntu.com>  Wed, 25 Mar 2020 19:06:56 +0100

indicator-china-weather (3.0.3-0ubuntu1) eoan; urgency=medium

  [ Li Xiang ]
  * Modify the AboutDialog.
  * Update translations for MainWindow.
  * Access icon from theme.
  * Change `PKGCONFIG += geoip` to `LIBS += -lGeoIP` for 19.10.
  * Support for Auto-Location of Cities.
  * Add the masking layer when acquiring data.
  * Fixed the bug that display location error.
  * Update translations.
  * Handling mouse events on pallets.
  * PrimaryScreen display.
  * Hide window when focusOutEvent occurred.
  * Mainwindow moves with the position of panel.
  * Fixed weekly error.
  * Used the latest version of heweather API.
  * New UI with Qt5.
  * Fixed the bug that Refresh time error.
  * Show on the bottom right of the screen when on UKUI.
  * Modified the CSS style of cityitemwidget.
  * Modified the path of translated pm files and the timing of generation.

  [ handsome_feng ]
  * debian/compat: 11 -> 12
  * debian/control:
    - Bump standards-vertion to 4.4.0.
    - Bump debhelper requirement for compat

 -- handsome_feng <jianfengli@ubuntukylin.com>  Mon, 12 Aug 2019 15:24:19 +0800

indicator-china-weather (2.2.8-0ubuntu1) bionic; urgency=medium

  * Remove "Recommends: python-apport" in the control file.
    (LP: #1763732)
  * Fix the bug that the aboutdialog failed to popped out.
